--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <scope>provided</scope>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.10.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>lldwbTest</finalName>
