--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
+        <dependency>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>4.8.158</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>lldwbTest</finalName>
