--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>SpringTest</module>
         <module>Test</module>
+        <module>city</module>
     </modules>
     <version>1.0-SNAPSHOT</version>
     <name>lldwbTest Maven Webapp</name>
