--- a/city/pom.xml
+++ b/city/pom.xml
@@ -18,9 +18,9 @@
         </dependency>
 
         <dependency>
-            <groupId>edu.nf</groupId>
+            <groupId>org.nf</groupId>
             <artifactId>dbutils</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
