--- a/bookcard/pom.xml
+++ b/bookcard/pom.xml
@@ -8,6 +8,12 @@
     </parent>
     <artifactId>bookcard</artifactId>
     <packaging>war</packaging>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.nf</groupId>
@@ -51,19 +57,19 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.3.2</version>
-                <configuration>
-                    <warSourceDirectory>webapp</warSourceDirectory>
-                    <!-- 指定web.xml路径 -->
-                    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.apache.maven.plugins</groupId>-->
+<!--                <artifactId>maven-war-plugin</artifactId>-->
+<!--                <version>3.3.2</version>-->
+<!--                <configuration>-->
+<!--                    <warSourceDirectory>webapp</warSourceDirectory>-->
+<!--                    &lt;!&ndash; 指定web.xml路径 &ndash;&gt;-->
+<!--                    <webXml>src\main\webapp\WEB-INF\web.xml</webXml>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+<!--        </plugins>-->
+<!--    </build>-->
 
 </project>
